<resources>
    <string name="app_name">NewConverter</string>
    <string name="USD_RUB">USD - RUB</string>
    <string name="Customization">Select a pair of currencies</string>
    <string name="RUB">RUB</string>
    <string name="USD">USD</string>
    <string name="From">FROM</string>
    <string name="To">TO</string>
    <string name="Off_On">OFF/ON</string>
    <string name="COURSE">COURSE</string>
</resources>
